Fixed spacing on main and project pages

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -140,8 +140,9 @@ ul {
 }
 
 .panel {
+    margin-top: 20px;
+    overflow: hidden;
     h5 {
-        // padding: 10px;
         font-size: 25px;
         text-align: center;
         color: white;
@@ -176,6 +177,7 @@ ul {
     border-radius: 50%;
     height: 150px;
     width: 150px;
+    margin-top: 20px;
     // @media only screen and (min-width: 64.063em) { 
     //     height: 150px;
     //     width: 150px;
